manifests/not-deployed/jenkins/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: acme-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jenkins.hacksm.net
    secretName: jenkins-cert
  rules:
  - host: jenkins.hacksm.net
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 8200
        path: /
        pathType: Prefix
